# HaskellTests

./: .gitignore  .project  HaskellTests.cabal  conduitTestOut.txt  fiboReport.html  inputMarkov.txt  memoizationReport.html  outputMarkov.txt  report.html
benchs/: FiboBench.hs  HaskellTestsBench.hs  MemoizationBench.hs
src/: ConduitTry.hs  DependentTyping.hs  Fibo.hs  ListComprehension.hs  ListMonad.hs  Main.hs  MarkovChain.hs  Memoization.hs  MonoidTest.hs  MultiwayIf.hs  PhantomType.hs  PolyvariadicFunction.hs  SodiumTest.hs  TextAlgo.hs  TypeFamilies.hs
src/Composition/: Types.hs
src/Container/: DataSequence.hs  DiffList.hs  Zipper.hs
src/Extensions/: DependentTyping.hs  ListComprehension.hs  MultiwayIf.hs  PolyvariadicFunction.hs  TypeFamilies.hs
src/Lib/: ConduitTry.hs  DateTime.hs  MarkovChain.hs  PipeTry.hs  SodiumTest.hs
src/MonadTry/: CompoundState.hs  ContMonad.hs  ListMonad.hs  MonoidTest.hs  ZipList.hs
src/Performance/: Fibo.hs  IOPartialSorting.hs  Memoization.hs
src/Tricks/: PhantomType.hs
tests/: FiboTests.hs  ListMonadTests.hs  MemoizationTest.hs  MonoidTestTest.hs  MultiwayIfTests.hs  TestSuite.hs  TextAlgoTests.hs
