name:           HaskellTests
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple
author:         Quentin Duval

executable HaskellTests
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   text >=1.2 && <1.3,
                   vector >=0.10 && <0.11,
                   containers >=0.5 && <0.6,
                   mtl >=2.1 && <2.2,
                   unordered-containers >=0.2 && <0.3,
                   hashtables >=1.2 && <1.3,
                   conduit >=1.2 && <1.3,
                   random >=1.1 && <1.2,
                   transformers >=0.4 && <0.5
  ghc-options:     -Wall -O2 -rtsopts
  other-modules:   
                   MonoidTest,
                   MultiwayIf,
                   Memoization,
                   DependentTyping,
                   PhantomType,
                   ListMonad,
                   TypeFamilies,
                   ListComprehension,
                   PolyvariadicFunction,
                   ConduitTry

test-suite TestSuite
  type:            exitcode-stdio-1.0
  main-is:         TestSuite.hs
  ghc-options:     -Wall -rtsopts
  build-depends:   base >= 4, tasty >= 0.10.1.1, tasty-hunit, HUnit, tasty-quickcheck, QuickCheck
  other-modules:   
                  Main,
                  MonoidTest,
                  MonoidTestTest,
                  MultiwayIf,
                  MultiwayIfTests,
                  Memoization,
                  MemoizationTest,
                  DependentTyping,
                  PhantomType,
                  ListMonad,
                  TypeFamilies,
                  ListComprehension,
                  PolyvariadicFunction,
                  ConduitTry
  hs-source-dirs:  
                  tests,
                  src

benchmark HaskellTestsBench
  type:            exitcode-stdio-1.0
  build-depends:   
                   base >= 4,
                   criterion >= 1.0 && < 1.1
  hs-source-dirs:  
                   benchs, 
                   src
  ghc-options:     -Wall -O2 -rtsopts
  main-is:         HaskellTestsBench.hs
  other-modules:   
                   HaskellTestsBench,
                   Memoization,
                   MemoizationBench,
                   DependentTyping,
                   PhantomType,
                   ListMonad,
                   TypeFamilies,
                   ListComprehension,
                   PolyvariadicFunction,
                   ConduitTry

