name:           HaskellTests
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple
author:         Quentin Duval

executable HaskellTests
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   text >=1.2 && <1.3,
                   vector >=0.10 && <0.11,
                   containers >=0.5 && <0.6,
                   mtl >=2.1 && <2.2,
                   unordered-containers >=0.2 && <0.3,
                   hashtables >=1.2 && <1.3,
                   conduit >=1.2 && <1.3,
                   random >=1.1 && <1.2,
                   transformers >=0.4 && <0.5,
                   conduit-extra >=1.1 && <1.2,
                   bytestring >=0.10 && <0.11,
                   sodium >=0.11 && <0.12,
                   hashable >=1.2 && <1.3,
                   parsec >=3.1 && <3.2,
                   markov-chain >=0.0 && <0.1,
                   dlist >=0.7 && <0.8,
                   ListZipper >=1.2 && <1.3
  ghc-options:     -Wall -O2 -rtsopts
  other-modules:   
                   TextAlgo,
                   Container.DataSequence,
                   Container.DiffList,
                   MonadTry.ListMonad,
                   Extensions.ListComprehension,
                   Extensions.DependentTyping,
                   Extensions.MultiwayIf,
                   MonadTry.MonoidTest,
                   Extensions.PolyvariadicFunction,
                   Performance.Fibo,
                   Performance.Memoization,
                   Tricks.PhantomType,
                   Extensions.TypeFamilies,
                   Lib.MarkovChain,
                   Lib.ConduitTry,
                   Lib.SodiumTest,
                   Container.Zipper,
                   MonadTry.ContMonad

test-suite TestSuite
  type:            exitcode-stdio-1.0
  main-is:         TestSuite.hs
  ghc-options:     -Wall -rtsopts
  build-depends:   base >= 4, tasty >= 0.10.1.1, tasty-hunit, HUnit, tasty-quickcheck, QuickCheck
  other-modules:   
                  Main,
                  MonoidTestTest,
                  MultiwayIfTests,
                  MemoizationTest,
                  TextAlgo,
                  TextAlgoTests,
                  FiboTests,
                  Container.DataSequence,
                  Container.DiffList,
                  MonadTry.ListMonad,
                  Extensions.ListComprehension,
                  Extensions.DependentTyping,
                  Extensions.MultiwayIf,
                  MonadTry.MonoidTest,
                  Extensions.PolyvariadicFunction,
                  Performance.Fibo,
                  Performance.Memoization,
                  Tricks.PhantomType,
                  Extensions.TypeFamilies,
                  Lib.MarkovChain,
                  Lib.ConduitTry,
                  Lib.SodiumTest,
                  Container.Zipper,
                  ListMonadTests,
                  MonadTry.ContMonad
  hs-source-dirs:  
                  tests,
                  src

benchmark HaskellTestsBench
  type:            exitcode-stdio-1.0
  build-depends:   
                   base >= 4,
                   criterion >= 1.0 && < 1.1
  hs-source-dirs:  
                   benchs, 
                   src
  ghc-options:     -Wall -O2 -rtsopts
  main-is:         HaskellTestsBench.hs
  other-modules:   
                   HaskellTestsBench,
                   MemoizationBench,
                   TextAlgo,
                   FiboBench,
                   Container.DataSequence,
                   Container.DiffList,
                   MonadTry.ListMonad,
                   Extensions.ListComprehension,
                   Extensions.DependentTyping,
                   Extensions.PolyvariadicFunction,
                   Performance.Fibo,
                   Performance.Memoization,
                   Tricks.PhantomType,
                   Extensions.TypeFamilies,
                   Lib.MarkovChain,
                   Lib.ConduitTry,
                   Lib.SodiumTest,
                   Container.Zipper,
                   MonadTry.ContMonad

